update alt tags-

--- a/src/javascript/templates/patient1/patient1View1.hbs
+++ b/src/javascript/templates/patient1/patient1View1.hbs
@@ -3,7 +3,7 @@
   <div class="col-md-3 no-pad">
     <div id="side-navs-fixed">
       <nav class="side-nav background-pink">
-        <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="" />
+        <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="Velma Belt" />
         <ul>
           <li><span class="white">No. 01</span></li>
           <li>Mammograms</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
