--- a/src/javascript/templates/patient1/patient1View13.hbs
+++ b/src/javascript/templates/patient1/patient1View13.hbs
@@ -4,7 +4,7 @@
                 <div class="col-md-3 no-pad">
                     <div id="side-navs-fixed">
                       <nav class="side-nav">
-                        <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="" />
+                        <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="Velma Belt" />
                         <ul class="complete-side">
                           <li><span class="number-gray">No. 01</span></li>
                           <li class="pink-text">Mammograms</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
@@ -57,7 +57,7 @@ Generally, the smaller the tumor, the better the patient’s chances for positiv
 
 </p>
   <figure>
-    <img src="images/chart3.jpg" alt="" />
+    <img src="images/chart3.jpg" alt="Pathology report shows detailed information about the patient’s tumor" />
   </figure><br><br>
 <strong>Be sure to record this information in your Lab Handbook.
 </strong>
