--- a/src/javascript/templates/patient1/patient1View14.hbs
+++ b/src/javascript/templates/patient1/patient1View14.hbs
@@ -6,7 +6,7 @@
           <div class="col-md-3 no-pad">
               <div id="side-navs-fixed">
                 <nav class="side-nav">
-                  <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="" />
+                  <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="Velma Belt" />
                   <ul class="complete-side">
                     <li><span class="number-gray">No. 01</span></li>
                     <li class="pink-text">Mammograms</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
@@ -60,12 +60,12 @@
             <p>It does this by eradicating microscopic cancer cells that may remain after initial treatment.
       <br><br>
       In precision medicine, physicians evaluate the results of a range of tests in order to make recommendations about adjuvant treatment for each                                                                  patient.  Each test provides critical information to help                                                                physicians understand the precise treatments that                                                                                         will achieve the best outcome for the patient.
-      <br><br>  
+      <br><br>
       You will learn about those tests and their implications for breast cancer treatment in this segment of the                                                        Decoding Cancer Virtual Lab.
 
             </p>
                <figure>
-                 <img src="images/docotor_and_microscope.jpg" alt="" />
+                 <img src="images/docotor_and_microscope.jpg" alt="Pathologist views slides through a microscope" />
                </figure>
                   <div class="row continue-container background-nav-blue">
                       <div class="col-md-12 no-pad text-center">
