--- a/src/javascript/templates/patient1/patient1View16.hbs
+++ b/src/javascript/templates/patient1/patient1View16.hbs
@@ -4,7 +4,7 @@
     <div class="col-sm-3 no-pad">
       <div id="side-navs-1">
                   <nav class="side-nav">
-                    <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="" />
+                    <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="Velma Belt" />
                     <ul class="complete-side">
                       <li><span class="number-gray">No. 01</span></li>
                       <li class="pink-text">Mammograms</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
@@ -67,11 +67,11 @@
         </li>
   </ul>
          <figure>
-           <img src="images/double_helix.jpg" alt="" />
+           <img src="images/double_helix.jpg" alt="Microscopic image of DNA spiral helix" />
          </figure>
-          
+
           <figure>
-            <img src="images/doctor_in_lab.jpg" alt="" />
+            <img src="images/doctor_in_lab.jpg" alt="Pathologist uses specialized equipment to place sample material onto a slide" />
           </figure>
 
           <div class="row continue-container background-nav-blue">
