--- a/src/javascript/templates/patient1/patient1View19.hbs
+++ b/src/javascript/templates/patient1/patient1View19.hbs
@@ -8,7 +8,7 @@
     <div id="side-navs-1">
 
       <nav class="side-nav">
-        <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="" />
+        <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="Velma Belt" />
         <ul class="complete-side">
           <li><span class="number-gray">No. 01</span></li>
           <li class="pink-text">Mammograms</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
@@ -62,7 +62,7 @@
 
         <h2>Conducting the ER test:</h2>
         <div class="svg-container">
-            <img src="images/ER_Invasive3.jpg" alt="cell biopsy slide 3" />
+            <img src="images/ER_Invasive3.jpg" alt="Microscopic image of ER Test tissue sample shows brown areas on white background" />
             <div class="svg-text full">
                 <p>
                   <strong>Step 3:</strong> The sample is viewed under a microscope. Brown color indicates a positive test. No brown color indicates a negative test.
