--- a/src/javascript/templates/patient1/patient1View2.hbs
+++ b/src/javascript/templates/patient1/patient1View2.hbs
@@ -3,7 +3,7 @@
   <div class="col-sm-3 no-pad">
     <div id="side-navs-1">
       <nav class="side-nav background-pink">
-        <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="" />
+        <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="Velma Belt" />
         <ul>
           <li><span class="white">No. 01</span></li>
           <li>Mammograms</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
@@ -44,7 +44,7 @@
     <p>Mammography is a screening technique that can detect early signs of breast cancer.
       To take a mammogram, the breast is briefly pressed between two plates. Flattening the breast allows better penetration of X-rays, creating a sharper image.</p>
     <figure>
-      <img src="images/patient_and_doctor.jpg" alt="" />
+      <img src="images/patient_and_doctor.jpg" alt="A female medical professional assists a woman as she gets a mammogram" />
 
 
 
