--- a/src/javascript/templates/patient1/patient1View21.hbs
+++ b/src/javascript/templates/patient1/patient1View21.hbs
@@ -4,7 +4,7 @@
     <div class="col-md-3 no-pad">
         <div id="side-navs-fixed">
           <nav class="side-nav">
-            <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="" />
+            <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="Velma Belt" />
             <ul class="complete-side">
               <li><span class="number-gray">No. 01</span></li>
               <li class="pink-text">Mammograms</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
@@ -58,7 +58,7 @@
 
 
       <figure>
-        <img src="images/chart2.jpg" alt="" />
+        <img src="images/chart2.jpg" alt="amplified or not amplified chart" />
       </figure><br><br>
           <p>For example, if the pathologist counts a total of 42 HER2 dots and 7 CEP17 dots, the HER2/CEP17 ratio is 6. This means that the HER2 Test result will be reported as amplified.<br><br>
         If the HER2 FISH results come back as amplified, the physician should recommend HER2-targeted therapy.<br><br>
