--- a/src/javascript/templates/patient1/patient1View22.hbs
+++ b/src/javascript/templates/patient1/patient1View22.hbs
@@ -4,7 +4,7 @@
   <div class="col-sm-3 no-pad">
     <div id="side-navs-1">
       <nav class="side-nav">
-        <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="" />
+        <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="Velma Belt" />
         <ul class="complete-side">
           <li><span class="number-gray">No. 01</span></li>
           <li class="pink-text">Mammograms</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
@@ -57,7 +57,7 @@
 
     <h2>Conducting the HER2 FISH Test:</h2>
       <div class="svg-container">
-        <img src="images/microscope3.jpg" alt="cell biopsy slide 3" />
+        <img src="images/microscope3.jpg" alt="Technician views a slide under a microscope" />
           <div class="svg-text full">
               <p>
                   <strong>Step 1: </strong>
