--- a/src/javascript/templates/patient1/patient1View3.hbs
+++ b/src/javascript/templates/patient1/patient1View3.hbs
@@ -3,7 +3,7 @@
   <div class="col-sm-3 no-pad">
     <div id="side-navs-1">
       <nav class="side-nav background-pink">
-        <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="" />
+        <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="Velma Belt" />
         <ul>
           <li><span class="white">No. 01</span></li>
           <li>Mammograms</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
@@ -45,7 +45,7 @@
 
     </p>
        <figure>
-         <img src="images/normalbreast.jpg" alt="" />
+         <img src="images/normalbreast.jpg" alt="A mammogram film showing normal breast tissue" />
        </figure>
        <br><br>
         <p>
@@ -53,7 +53,7 @@
 
         </p>
         <figure>
-         <img src="images/breast_scan2.jpg" alt="" />
+         <img src="images/breast_scan2.jpg" alt="A mammogram film showing abnormal ardea near bottom of breast" />
         </figure>
         <div class="row continue-container background-nav-blue">
             <div class="col-md-12 no-pad text-center">
