--- a/src/javascript/templates/patient2/patient2view5.hbs
+++ b/src/javascript/templates/patient2/patient2view5.hbs
@@ -4,7 +4,7 @@
   <div class="col-md-3 no-pad">
     <div id="side-navs-fixed">
       <nav class="side-nav background-purple">
-        <img class="patient2" src="images/patient1-final.jpg">
+        <img class="patient2" src="images/patient1-final.jpg" alt="Michele Johnson">
         <ul class="background-purple margin-bottom-0">
           <li><span class="white">Patient No. 02</span></li>
           <li>Michele Johnson</li>
@@ -56,7 +56,7 @@
         </div>
       </div>
       <figure>
-        <img src="images/microscope8.jpg" alt="" />
+        <img src="images/microscope8.jpg" alt="Close-up of microscope lenses" />
       </figure>
       <p>Here is important information about Michele’s tissue sample.  Be sure to record it in your Lab Handbook. Hover over the tissue samples to magnify.
 </p>
@@ -67,7 +67,7 @@
 
 </ul>
 <figure>
-  <img class="magnify one-hun" class="zoom" data-magnify-src="images/HE_Invasive_Michele.jpg" src="images/HE_Invasive_Michele.jpg" alt="cell biopsy slide 3" />
+  <img class="magnify one-hun" class="zoom" data-magnify-src="images/HE_Invasive_Michele.jpg" src="images/HE_Invasive_Michele.jpg" alt="Magnification of disordered cells showing irregular shapes and size, no duct structures, and more purple stain than pink." />
 </figure>
 
 
