--- a/src/javascript/templates/patient2/patient2view6.hbs
+++ b/src/javascript/templates/patient2/patient2view6.hbs
@@ -3,7 +3,7 @@
   <div class="col-md-3 no-pad">
     <div id="side-navs-fixed">
       <nav class="side-nav background-purple">
-        <img class="patient2" src="images/patient1-final.jpg">
+        <img class="patient2" src="images/patient1-final.jpg" alt="Michele Johnson">
         <ul class="background-purple margin-bottom-0">
           <li><span class="white">Patient No. 02</span></li>
           <li>Michele Johnson</li>
@@ -65,7 +65,7 @@ The pathologist examined Michele’s tissue and has provided a pathology report.
         </ul>
       </p>
         <figure>
-          <img src="images/Discovery_ValSkinner_PathologyReports_3.jpg" alt="" />
+          <img src="images/Discovery_ValSkinner_PathologyReports_3.jpg" alt="Pathology report shows detailed information about the patient’s tumor" />
         </figure>
         <p class="pad50">
           Be sure to record this information in your Lab Handbook.
