--- a/src/javascript/templates/patient3/patient3view12.hbs
+++ b/src/javascript/templates/patient3/patient3view12.hbs
@@ -49,7 +49,7 @@
 
 
         <div class="svg-container">
-            <img src="images/test_tubes.jpg" alt="cell biopsy slide 3" />
+            <img src="images/test_tubes.jpg" alt="Fluids separate in test tubes in preparation for RNA extraction and analysis" />
             <div class="svg-text full">
                 <p>
                   Click to send Brittany's tissue sample for OncoType DX® testing.
