--- a/src/javascript/templates/patient3/patient3view3.hbs
+++ b/src/javascript/templates/patient3/patient3view3.hbs
@@ -57,7 +57,7 @@
       <p><strong>Be sure to record this information in your Lab Handbook.</strong>
 </p>
          <figure class="m-bottom">
-           <img src="images/breast_scan5.jpg" alt="" />
+           <img src="images/breast_scan5.jpg" alt="Mammogram film showing abnormality near center of left breast" />
          </figure>
 
 
