--- a/src/javascript/templates/patient3/patient3view5.hbs
+++ b/src/javascript/templates/patient3/patient3view5.hbs
@@ -56,7 +56,7 @@ Brittany had a left breast biopsy. Let’s evaluate the tissue.
         </div>
       </div>
       <figure>
-        <img src="images/microscope8.jpg" alt="" />
+        <img src="images/microscope8.jpg" alt="Close-up of microscope lenses" />
       </figure>
       <p>Here is important information about Michele’s tissue sample.  Be sure to record it in your Lab Handbook. Hover over the tissue samples to magnify.
 </p>
@@ -67,7 +67,7 @@ Brittany had a left breast biopsy. Let’s evaluate the tissue.
 
 </ul>
 <figure>
-  <img class="magnify one-hun" class="zoom" data-magnify-src="images/HE_Invasive_Brittany.jpg" src="images/HE_Invasive_Brittany.jpg" alt="cell biopsy slide 3" />
+  <img class="magnify one-hun" class="zoom" data-magnify-src="images/HE_Invasive_Brittany.jpg" src="images/HE_Invasive_Brittany.jpg" alt="Magnification of disordered cells showing irregular shapes and size, no duct structures, and more purple stain than pink." />
 </figure>
 
 
