--- a/src/javascript/templates/patient3/patient3view6.hbs
+++ b/src/javascript/templates/patient3/patient3view6.hbs
@@ -65,7 +65,7 @@ The pathologist examined Brittany’s tissue and has provided a pathology report
         </ul>
       </p>
       <figure>
-        <img src="images/Discovery_ValSkinner_PathologyReports_2.jpg" alt="" />
+        <img src="images/Discovery_ValSkinner_PathologyReports_2.jpg" alt="Pathology report shows detailed information about the patient’s tumor" />
       </figure>
         <p>Be sure to record this information in your Lab Handbook.</p>
          <div class="row continue-container background-nav-blue">
