--- a/src/javascript/templates/startView2.hbs
+++ b/src/javascript/templates/startView2.hbs
@@ -33,7 +33,7 @@
 
     <div class="col-md-5 no-pad">
 
-      <img class="patient2" src="images/patient1-final.jpg">
+      <img class="patient2" src="images/patient1-final.jpg" alt="Michele Johnson">
 
     </div>
     <div class="col-md-7 no-pad">
