--- a/src/javascript/templates/startView3.hbs
+++ b/src/javascript/templates/startView3.hbs
@@ -31,7 +31,7 @@
 <div class="pick-patient col-md-8 col-md-offset-2">
   <div class="overlay-purple"></div>
     <div class="col-md-5 no-pad">
-      <img class="patient2" src="images/patient1-final.jpg">
+      <img class="patient2" src="images/patient1-final.jpg" alt="Michele Johnson">
       <img class="up-next finished" src="images/completed-purple.jpg" alt="" />
     </div>
     <div class="col-md-7 no-pad">
@@ -54,7 +54,7 @@
 
   <div class="col-md-5 no-pad">
 
-    <img class="patient3" src="images/patient2-final.jpg">
+    <img class="patient3" src="images/patient2-final.jpg" alt="Image of Brittany Featherston">
   </a>
   </div>
   <div class="col-md-7 no-pad">
