--- a/src/javascript/templates/patient1/patient1View10.hbs
+++ b/src/javascript/templates/patient1/patient1View10.hbs
@@ -4,7 +4,7 @@
                       <div id="side-navs-1">
 
                         <nav class="side-nav">
-                          <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="" />
+                          <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="Velma Belt" />
                           <ul class="complete-side">
                             <li><span class="number-gray">No. 01</span></li>
                             <li class="pink-text">Mammograms</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
@@ -52,7 +52,7 @@
                       <p>Most women with breast cancer will undergo some kind of surgery to remove tissue from the area of concern. The procedure is performed by a surgeon.
                       </p>
                          <figure>
-                           <img src="images/team_of_doctors.jpg" alt="" />
+                           <img src="images/team_of_doctors.jpg" alt="Team of physicians perform surgery on a patient" />
                          </figure>
                           <div class="row continue-container background-nav-blue">
                               <div class="col-md-12 no-pad text-center">
