--- a/src/javascript/templates/patient1/patient1View17.hbs
+++ b/src/javascript/templates/patient1/patient1View17.hbs
@@ -3,7 +3,7 @@
     <div class="col-sm-3 no-pad">
       <div id="side-navs-1">
         <nav class="side-nav">
-          <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="" />
+          <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="Velma Belt" />
           <ul class="complete-side">
             <li><span class="number-gray">No. 01</span></li>
             <li class="pink-text">Mammograms</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
@@ -55,7 +55,7 @@
 
       <h2>Conducting the ER test:</h2>
         <div class="svg-container">
-          <img src="images/test_sample_and_gloved_hand2.jpg" alt="" />
+          <img src="images/test_sample_and_gloved_hand2.jpg" alt="Technician holds a slide containing a tissue sample" />
             <div class="svg-text full">
                 <p>
                     <strong>Step 1:</strong>
