--- a/src/javascript/templates/patient1/patient1View18.hbs
+++ b/src/javascript/templates/patient1/patient1View18.hbs
@@ -6,7 +6,7 @@
 
 
         <nav class="side-nav">
-          <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="" />
+          <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="Velma Belt" />
           <ul class="complete-side">
             <li><span class="number-gray">No. 01</span></li>
             <li class="pink-text">Mammograms</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
@@ -60,7 +60,7 @@
 
     <h2>Conducting the ER test:</h2>
       <div class="svg-container">
-          <img class="magnify" class="zoom" data-magnify-src="images/test_sample_and_gloved_hand2.jpg" src="images/test_sample_and_gloved_hand2.jpg" alt="cell biopsy slide 3" />
+          <img class="magnify" class="zoom" data-magnify-src="images/test_sample_and_gloved_hand2.jpg" src="images/test_sample_and_gloved_hand2.jpg" alt="Technician holds a slide containing a tissue sample" />
           <div class="svg-text full">
               <p>
                   <strong>Step 2:</strong>
