--- a/src/javascript/templates/patient1/patient1View23.hbs
+++ b/src/javascript/templates/patient1/patient1View23.hbs
@@ -4,7 +4,7 @@
     <div class="col-sm-3 no-pad">
         <div id="side-navs-1">
             <nav class="side-nav">
-              <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="" />
+              <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="Velma Belt" />
                 <ul class="complete-side">
                     <li>
                         <span class="number-gray">No. 01</span>
@@ -68,7 +68,7 @@
 
 <h2>Conducting the HER2 FISH Test:</h2>
           <div class="svg-container">
-              <img src="images/microscope3.jpg" alt="cell biopsy slide 3" />
+              <img src="images/microscope3.jpg" alt="Technician views a slide under a microscope" />
               <div class="svg-text full">
                   <p>
                     <strong>Step 2:</strong> The sample is washed in a buffer agent.</p>
