--- a/src/javascript/templates/patient1/patient1View24.hbs
+++ b/src/javascript/templates/patient1/patient1View24.hbs
@@ -17,7 +17,7 @@
     <div id="side-navs-1">
 
       <nav class="side-nav">
-        <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="" />
+        <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="Velma Belt" />
         <ul class="complete-side">
           <li><span class="number-gray">No. 01</span></li>
           <li class="pink-text">Mammograms</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
@@ -69,7 +69,7 @@
 
       <h2>Conducting the HER2 FISH Test:</h2>
         <div class="svg-container">
-            <img src="images/test_samples.jpg" alt="cell biopsy slide 3" />
+            <img src="images/test_samples.jpg" alt="Image of several slides containing tissue samples" />
             <div class="svg-text full">
                 <p>
                   <strong>Step 3:</strong> The slides are dehydrated in ethanol and air-dried.
