--- a/src/javascript/templates/patient1/patient1View32.hbs
+++ b/src/javascript/templates/patient1/patient1View32.hbs
@@ -4,7 +4,7 @@
     <div class="col-md-3 no-pad">
         <div id="side-navs-fixed">
           <nav class="side-nav">
-            <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="" />
+            <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="Velma Belt" />
             <ul class="complete-side">
               <li><span class="number-gray">No. 01</span></li>
               <li class="pink-text">Mammograms</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
@@ -58,7 +58,7 @@
 
         <h2>Conducting the test:</h2>
             <div class="svg-container">
-                <img src="images/onco_test.jpg" alt="cell biopsy slide 3" />
+                <img src="images/onco_test.jpg" alt="Specialized equipment is used to extract red-colored samples from multiple tubes at once" />
                 <div class="svg-text full">
                     <p>
                       <strong>Step 3:</strong>
