--- a/src/javascript/templates/patient1/patient1View33-5.hbs
+++ b/src/javascript/templates/patient1/patient1View33-5.hbs
@@ -4,7 +4,7 @@
     <div class="col-md-3 no-pad">
         <div id="side-navs-fixed">
           <nav class="side-nav">
-            <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="" />
+            <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="Velma Belt" />
             <ul class="complete-side">
               <li><span class="number-gray">No. 01</span></li>
               <li class="pink-text">Mammograms</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
@@ -64,7 +64,7 @@ Velma’s OncoType DX® Test results are in!       </blockquote>
 
         Be sure to record the results in your Lab Handbook.</p>
 
-<figure>  <img src="images/test_results.jpg" alt="cell biopsy slide 3" /></figure>
+<figure>  <img src="images/test_results.jpg" alt="A physician and pathologist meet to discuss a patient’s test results" /></figure>
 
 
             <div class="row continue-container background-nav-blue">
