--- a/src/javascript/templates/patient1/patient1View34.hbs
+++ b/src/javascript/templates/patient1/patient1View34.hbs
@@ -4,7 +4,7 @@
     <div class="col-md-3 no-pad">
         <div id="side-navs-fixed">
           <nav class="side-nav">
-            <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="" />
+            <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="Velma Belt" />
             <ul class="complete-side">
               <li><span class="number-gray">No. 01</span></li>
               <li class="pink-text">Mammograms</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
@@ -58,7 +58,7 @@ Putting it All Together: The Estrogen Receptor (ER) Test
                       If the ER Test score is positive, the physician may recommend hormone blocking therapy to block estrogen activity.<br><br>
                       <strong>Velma’s ER test score was positive.</strong>
  </p>
-<figure>  <img src="images/test_tubes_and_data_sheets.jpg" alt="cell biopsy slide 3" /></figure>
+<figure>  <img src="images/test_tubes_and_data_sheets.jpg" alt="Empty specimen tubes rest on a physician’s notebook" /></figure>
 
 
             <div class="row continue-container background-nav-blue">
