--- a/src/javascript/templates/patient1/patient1View36.hbs
+++ b/src/javascript/templates/patient1/patient1View36.hbs
@@ -4,7 +4,7 @@
     <div class="col-md-3 no-pad">
         <div id="side-navs-fixed">
           <nav class="side-nav">
-            <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="" />
+            <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="Velma Belt" />
             <ul class="complete-side">
               <li><span class="number-gray">No. 01</span></li>
               <li class="pink-text">Mammograms</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
@@ -65,7 +65,7 @@ Putting it All Together: The OncoType DX® Test       </blockquote>
 <br><br>
 <strong>Velma’s score was 10.</strong>
  </p>
-<figure>  <img src="images/test.jpg" alt="cell biopsy slide 3" /></figure>
+<figure>  <img src="images/test.jpg" alt="Pathologist holds specimen tube containing yellow fluid" /></figure>
 
 
             <div class="row continue-container background-nav-blue">
