--- a/src/javascript/templates/patient1/patient1View4.hbs
+++ b/src/javascript/templates/patient1/patient1View4.hbs
@@ -3,7 +3,7 @@
   <div class="col-md-3 no-pad">
     <div id="side-navs-fixed">
       <nav class="side-nav background-pink">
-        <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="" />
+        <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="Velma Belt" />
         <ul>
           <li><span class="white">No. 01</span></li>
           <li>Mammograms</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
@@ -55,7 +55,7 @@
 	.st1{fill:#FFFFFF;}
 	.st2{fill:none;}
 </style>
-<image style="width:100%;height:100%;position:relative;top:0;left:0;bottom:0;right:0;overflow:visible;enable-background:new" width="810" height="810" xlink:href="images/Mammogram_Right_Abnormal_Patient1-Velma.jpg" >
+<image style="width:100%;height:100%;position:relative;top:0;left:0;bottom:0;right:0;overflow:visible;enable-background:new" width="810" height="810" xlink:href="images/Mammogram_Right_Abnormal_Patient1-Velma.jpg" alt="A mammogram film showing normal breast tissue">
 </image>
 <ellipse class="st0" cx="606.7" cy="656.5" rx="68.1" ry="68.8"/>
 <path fill="#FFFFFF" class="circle" d="M606.7,732.1c-41.4,0-74.9-33.9-74.9-75.6s33.6-75.6,74.9-75.6s74.9,33.9,74.9,75.6l0,0
