--- a/src/javascript/templates/patient1/patient1View7.hbs
+++ b/src/javascript/templates/patient1/patient1View7.hbs
@@ -4,7 +4,7 @@
               <div class="col-md-3 no-pad">
                 <div id="side-navs-fixed">
                   <nav class="side-nav">
-                    <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="" />
+                    <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="Velma Belt" />
                     <ul class="complete-side">
                       <li><span class="number-gray">No. 01</span></li>
                       <li class="pink-text">Mammograms</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
@@ -52,7 +52,7 @@
                   <h2>Conducting the biopsy:</h2>
 
                   <div class="svg-container">
-                      <img src="images/adjusting_testing_machine.jpg" alt="" />
+                      <img src="images/adjusting_testing_machine.jpg" alt="Technician uses equipment to slice a thin piece of wax containing tissue sample" />
                       <div class="svg-text full">
                           <p>
                               <strong>Step 1:</strong>
