--- a/src/javascript/templates/patient1/patient1View8.hbs
+++ b/src/javascript/templates/patient1/patient1View8.hbs
@@ -6,7 +6,7 @@
               <div class="col-md-3 no-pad">
                 <div id="side-navs-fixed">
                   <nav class="side-nav">
-                    <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="" />
+                    <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="Velma Belt" />
                     <ul class="complete-side">
                       <li><span class="number-gray">No. 01</span></li>
                       <li class="pink-text">Mammograms</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
@@ -71,7 +71,7 @@
                 </p>
 
 <figure>
-                     <img class="magnify one-hun" class="zoom" data-magnify-src="images/BenignBreast_NORMAL.jpg" src="images/BenignBreast_NORMAL.jpg" alt="cell biopsy slide 3" />
+                     <img class="magnify one-hun" class="zoom" data-magnify-src="images/BenignBreast_NORMAL.jpg" src="images/BenignBreast_NORMAL.jpg" alt="cell biopsy slide 3" alt="Magnification of cells showing orderly duct structures, similar cells, and purple stain with intervening pink stain." />
 </figure>
 <h2>Cancerous</h2>
 
@@ -79,7 +79,7 @@
 Cancerous cells have a disordered appearance with large, irregular, different shapes and sizes with large nuclei.  They have no duct structures and stain more purple than pink.
                     </p>
                     <figure>
-                      <img class="magnify one-hun" class="zoom" data-magnify-src="images/HE_Invasive.jpg" src="images/HE_Invasive.jpg" alt="cell biopsy slide 3" />
+                      <img class="magnify one-hun" class="zoom" data-magnify-src="images/HE_Invasive.jpg" src="images/HE_Invasive.jpg" alt="Magnification of disordered cells showing irregular shapes and size, no duct structures, and more purple stain than pink." />
                     </figure>
                   <div class="row continue-container background-nav-blue">
                       <div class="col-md-12 no-pad text-center">
