--- a/src/javascript/templates/patient2/patient2view10.hbs
+++ b/src/javascript/templates/patient2/patient2view10.hbs
@@ -4,7 +4,7 @@
   <div class="col-md-3 no-pad">
     <div id="side-navs-fixed">
       <nav class="side-nav background-purple">
-        <img class="patient2" src="images/patient1-final.jpg">
+        <img class="patient2" src="images/patient1-final.jpg" alt="Michele Johnson">
         <ul class="background-purple margin-bottom-0">
           <li><span class="white">Patient No. 02</span></li>
           <li>Michele Johnson</li>
@@ -59,7 +59,7 @@
 </p>
 
 <figure>
-  <img class=" one-hun" class="zoom"  src="images/Microscope_GreenRedDots_8_3.jpg" alt="cell biopsy slide 3" />
+  <img class=" one-hun" class="zoom"  src="images/Microscope_GreenRedDots_8_3.jpg" alt="Microscopic view of cells showing 3 HER2 dots and 2 CEP17 dots" />
 </figure>
 
 
