--- a/src/javascript/templates/patient2/patient2view3.hbs
+++ b/src/javascript/templates/patient2/patient2view3.hbs
@@ -3,7 +3,7 @@
   <div class="col-md-3 no-pad">
     <div id="side-navs-fixed">
       <nav class="side-nav background-purple">
-        <img class="patient2" src="images/patient1-final.jpg">
+        <img class="patient2" src="images/patient1-final.jpg" alt="Michele Johnson">
         <ul class="background-purple margin-bottom-0">
           <li><span class="white">Patient No. 02</span></li>
           <li>Michele Johnson</li>
@@ -62,9 +62,9 @@
          <?xml version="1.0" encoding="utf-8"?>
          <!-- Generator: Adobe Illustrator 19.2.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
          <svg version="1.1" id="pick-a-size" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-         	 viewBox="0 0 677.1 208.9" style="enable-background:new 0 0 677.1 208.9;" xml:space="preserve">
+         	 viewBox="0 0 677.1 208.9" style="enable-background:new 0 0 677.1 208.9;" alt="Mammogram film showing abnormality in right breast" xml:space="preserve">
 
-         <image style="width:100%;height:100%;position:relative;top:0;left:0;bottom:0;right:0;overflow:visible;enable-background:new" width="677" height="209" xlink:href="images/pick-a-size.png" transform="matrix(0.9826 0 0 0.9826 5.9397 -1.3465)">
+         <image style="width:100%;height:100%;position:relative;top:0;left:0;bottom:0;right:0;overflow:visible;enable-background:new" width="677" height="209" alt="Sample scale comparing relative sizes of pea, peanut, walnut shell, and lime" xlink:href="images/pick-a-size.png" transform="matrix(0.9826 0 0 0.9826 5.9397 -1.3465)">
          </image>
          <path fill="#DD307B" class="size-1-active" d="M110.6,161.2c-14.2,0-25.7-11.5-25.7-25.7s11.5-25.7,25.7-25.7s25.7,11.5,25.7,25.7l0,0
          	C136.3,149.7,124.8,161.2,110.6,161.2z M110.6,113.6c-12.1,0-21.9,9.8-21.9,21.9c0,12.1,9.8,21.9,21.9,21.9
