--- a/src/javascript/templates/patient2/patient2view7.hbs
+++ b/src/javascript/templates/patient2/patient2view7.hbs
@@ -3,7 +3,7 @@
   <div class="col-md-3 no-pad">
     <div id="side-navs-fixed">
       <nav class="side-nav background-purple">
-        <img class="patient2" src="images/patient1-final.jpg">
+        <img class="patient2" src="images/patient1-final.jpg" alt="Michele Johnson">
         <ul class="background-purple margin-bottom-0">
           <li><span class="white">Patient No. 02</span></li>
           <li>Michele Johnson</li>
