--- a/src/javascript/templates/patient3/patient3view10.hbs
+++ b/src/javascript/templates/patient3/patient3view10.hbs
@@ -59,7 +59,7 @@
 </p>
 
 <figure>
-  <img class=" one-hun" class="zoom"  src="images/Microscope_GreenRedDots_6_5.jpg" alt="cell biopsy slide 3" />
+  <img class=" one-hun" class="zoom"  src="images/Microscope_GreenRedDots_6_5.jpg" alt="Microscopic view of cells showing 6 HER2 dots and 2 CEP17 dots" />
 </figure>
 
 
