--- a/src/javascript/templates/patient3/patient3view8.hbs
+++ b/src/javascript/templates/patient3/patient3view8.hbs
@@ -69,7 +69,7 @@ Brittany’s tissue sample has been sent for HER2 FISH testing.
 
 </ul>
 <figure>
-  <img class="magnify one-hun" class="zoom" data-magnify-src="images/ER_Invasive2_Brittany.jpg" src="images/ER_Invasive2_Brittany.jpg" alt="cell biopsy slide 3" />
+  <img class="magnify one-hun" class="zoom" data-magnify-src="images/ER_Invasive2_Brittany.jpg" src="images/ER_Invasive2_Brittany.jpg" alt="Microscopic image of ER Test tissue sample shows brown areas on white background" />
 </figure>
 
 
