--- a/src/javascript/templates/startView.hbs
+++ b/src/javascript/templates/startView.hbs
@@ -12,7 +12,7 @@
   <a class="start-patient" href="/patient1view1" data-navigate="patient1view1"></a>
     <div class="col-md-5 no-pad">
 
-        <img class="patient1" src="images/patient3-final.jpg">
+        <img class="patient1" src="images/patient3-final.jpg" alt="Velma Belt">
       </a>
     </div>
     <div class="col-md-7 no-pad">
@@ -33,8 +33,8 @@
 </div>
 <div class="pick-patient col-md-8 col-md-offset-2 locked">
     <div class="col-md-5 no-pad">
-        <img class="patient2" src="images/patient1-final.jpg">
-        <img class="up-next" src="images/up-next.png" alt="" />
+        <img class="patient2" src="images/patient1-final.jpg" alt="Michele Johnson">
+        <img class="up-next" src="images/up-next.png" />
     </div>
     <div class="col-md-7 no-pad ">
       <img class="lock" src="images/locked.png" alt="" />
@@ -52,7 +52,7 @@
 </div>
 <div class="pick-patient col-md-8 col-md-offset-2 locked">
   <div class="col-md-5 no-pad">
-    <img class="patient3" src="images/patient2-final.jpg">
+    <img class="patient3" src="images/patient2-final.jpg" alt="Brittany Featherston">
   </div>
   <div class="col-md-7 no-pad ">
     <img class="lock" src="images/locked.png" alt="" />
