--- a/src/javascript/templates/patient2/patient2view1.hbs
+++ b/src/javascript/templates/patient2/patient2view1.hbs
@@ -47,7 +47,7 @@
       <p>Michele Johnson is a 47-year old female.  Michele recently had her routine yearly mammogram.  Michele has never had breast cancer before.
 </p>
          <figure class="m-bottom">
-           <img src="images/patient2slide1.png" alt="" />
+           <img src="images/patient2slide1.png" alt="Michele recently had her routine yearly mammogram" />
 
 
 
