fixed next button not being grayed out on mulptile pages

--- a/src/javascript/templates/patient3/patient3View13.hbs
+++ b/src/javascript/templates/patient3/patient3View13.hbs
@@ -57,7 +57,7 @@
 
 
             <!-- Button trigger modal -->
-            <a data-navigate="patient3view14" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
+            <a data-navigate="patient3view14" class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
 
             <!-- Modal -->
 
