--- a/src/javascript/templates/patient1/patient1View28.hbs
+++ b/src/javascript/templates/patient1/patient1View28.hbs
@@ -90,7 +90,7 @@ Should the test results be reported as amplified or not amplified?<br><br>
         <h2><span class="pink-hl">Correct</span>. The HER2 FISH ratio is 1.5, so HER2 is not amplified. This indicates that HER2-targeted therapy should not be recommended as part of Velma’s treatment.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
-          <a href="/patient1view10" data-navigate="patient1view10" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
+          <a href="/patient1view10" data-navigate="patient1view10" class="continue"><button id="next-page" type="button" class="muted"  name="button">Continue</button></a>
 
         </div>
       </div>
