--- a/src/javascript/templates/patient2/patient2view5.hbs
+++ b/src/javascript/templates/patient2/patient2view5.hbs
@@ -116,7 +116,7 @@
 
                </div>
                <div class="col-md-4">
-                 <a data-navigate="patient2view6" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
+                 <a data-navigate="patient2view6" class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
                </div>
              </div>
          </div>
