--- a/src/javascript/templates/patient3/patient3view8.hbs
+++ b/src/javascript/templates/patient3/patient3view8.hbs
@@ -118,7 +118,7 @@ Brittany’s tissue sample has been sent for HER2 FISH testing.
 
                </div>
                <div class="col-md-4">
-                 <a data-navigate="patient3view9" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
+                 <a data-navigate="patient3view9" class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
                </div>
              </div>
          </div>
