--- a/src/javascript/templates/patient2/patient2view12.hbs
+++ b/src/javascript/templates/patient2/patient2view12.hbs
@@ -43,7 +43,7 @@
 Use the notes from your Lab Handbook to recommend a personalized treatment plan for Michele Johnson.
     </blockquote>
     <main id="content-main" class="row patient-2 svg-test">
-      <p class="background-gray3">Select one of the following options and review your patient’s progress:</p>
+      <p class="background-gray3 pad50">Select one of the following options and review your patient’s progress:</p>
 
     <h2>A: Hormone blocking therapy only</h2>
 <div class="row reg-pad">
