--- a/src/javascript/templates/patient2/patient2view10.hbs
+++ b/src/javascript/templates/patient2/patient2view10.hbs
@@ -60,7 +60,7 @@
 
 
 <div class="col-md-5 yes-no col-sm-offset-1-5">
-  <a  class="continue next y-n"><button type="button" data-toggle="modal" data-backdrop="static" data-target="#myModal2"  name="button">Amplified <span>&#x2717;</span></button></a>
+  <a  class="continue next y-n"><button type="button" data-toggle="modal" data-backdrop="static" data-target="#myModal2"  name="button">Amplified</button></a>
   <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -76,7 +76,7 @@
   </div>
 </div>
 <div style="margin-left: 25px;" class="col-md-5 yes-no">
-  <a  class="continue next y-n"><button  type="button"data-toggle="modal" data-backdrop="static" data-target="#myModal"  name="button">Not Amplified <span>&#x2713;</span></button></a>
+  <a  class="continue next y-n"><button  type="button"data-toggle="modal" data-backdrop="static" data-target="#myModal"  name="button">Not Amplified</button></a>
 
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
