--- a/src/javascript/templates/patient3/patient3view10.hbs
+++ b/src/javascript/templates/patient3/patient3view10.hbs
@@ -60,7 +60,7 @@
 
 
 <div class="col-md-5 yes-no col-sm-offset-1-5">
-  <a  class="continue next y-n"><button type="button" data-toggle="modal" data-backdrop="static" data-target="#myModal2"  name="button">Amplified <span>&#x2717;</span></button></a>
+  <a  class="continue next y-n"><button type="button" data-toggle="modal" data-backdrop="static" data-target="#myModal2"  name="button">Amplified</button></a>
   <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
