fixed 4 issues with small updates

--- a/src/javascript/templates/patient1/patient1View19-3.hbs
+++ b/src/javascript/templates/patient1/patient1View19-3.hbs
@@ -67,7 +67,7 @@ Velma’s doctors have sent her tissue sample for ER testing.   </blockquote>
 
 
          <div class="col-md-5 yes-no col-sm-offset-1-5">
-           <a  class="continue next y-n"><button type="button" data-toggle="modal" data-backdrop="static" data-target="#myModal2"  name="button">Positive <span>&#x2717;</span></button></a>
+           <a  class="continue next y-n"><button type="button" data-toggle="modal" data-backdrop="static" data-target="#myModal2"  name="button">Positive </button></a>
            <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
              <div class="modal-dialog" role="document">
                <div class="modal-content">
@@ -83,7 +83,7 @@ Velma’s doctors have sent her tissue sample for ER testing.   </blockquote>
            </div>
          </div>
          <div style="margin-left: 25px;" class="col-md-5 yes-no">
-           <a  class="continue next y-n"><button  type="button"data-toggle="modal" data-backdrop="static" data-target="#myModal"  name="button">Negative <span>&#x2713;</span></button></a>
+           <a  class="continue next y-n"><button  type="button"data-toggle="modal" data-backdrop="static" data-target="#myModal"  name="button">Negative </button></a>
 
            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
              <div class="modal-dialog" role="document">
