--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1536,7 +1536,7 @@ button {
   text-transform: uppercase;
   font-weight: 100!important;
   &.muted {
-    color: gray;
+    color: #567996;
     cursor: default;
     text-transform: uppercase;
     font-size: 17px;
