fix pagination left border

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -408,7 +408,7 @@ top: 0px;
       max-width: 72px;
 
       &.finished {
-        left: -48px;
+      left: -48px;
       top: -1px;
       cursor:default!important;
       pointer-events: none;
@@ -995,6 +995,7 @@ top: -4px;
 }
 .breadcrumb.biopsy {
     height: 265px;
+    border-left: 40px solid #DAE5EA;
 }
 #loading{
     position:fixed;
@@ -1355,6 +1356,7 @@ iframe {
 }
 .steps-13 {
   height: 338px!important;
+  border-left: 40px solid #DAE5EA !important;
 }
 
 .arrow-start {
