fixed multiple issues in patient 3 with copy updates

--- a/src/javascript/templates/patient2/patient2view5.hbs
+++ b/src/javascript/templates/patient2/patient2view5.hbs
@@ -69,13 +69,13 @@
 
 <div class="row m-bottom multi-pad">
 
-
+<a  class="continue next y-n">
 <div class="col-md-3 yes-no col-sm-offset-2-5">
-  <a  class="continue next y-n"><button type="button" data-toggle="modal" data-backdrop="static" data-target="#myModal2"  name="button">No <span class="check-mark">&#x2717;</span></button></a>
+  <button type="button" data-toggle="modal" data-backdrop="static" data-target="#myModal2"  name="button">No <span class="check-mark">&#x2717;</span></button></a>
   <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <div class="modal-body">
+        <div class="modal-body pat2">
         <h2>Incorrect. This tissue sample does contain cancer cells.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
@@ -92,7 +92,7 @@
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <div class="modal-body">
+        <div class="modal-body pat2">
         <h2><span class="pink-hl">Correct</span>. Yes, this tissue sample contains cancer cells. Based on the biopsy, Michele had a left breast lumpectomy and lymph node biopsy.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
