--- a/src/javascript/templates/patient3/patient3view5.hbs
+++ b/src/javascript/templates/patient3/patient3view5.hbs
@@ -58,9 +58,9 @@ Brittany had a left breast biopsy. Let’s evaluate the tissue.
       <p>Here is important information about Michele’s tissue sample.  Be sure to record it in your Lab Handbook. Hover over the tissue samples to magnify.
 </p>
 <ul class="specs multi-pad">
-  <li><strong>Specimen Type:   </strong>Left breast biopsy</li>
-  <li><strong>Laterality:</strong> left</li>
-  <li><strong>Tumor size:</strong>3.5 cm</li>
+  <li><strong>Specimen Type:</strong> Left breast biopsy</li>
+  <li><strong>Laterality:</strong> Left</li>
+  <li><strong>Tumor size:</strong> 3.5 cm</li>
 
 </ul>
 <figure class="multi-pad">
