--- a/src/javascript/templates/patient3/patient3view6.hbs
+++ b/src/javascript/templates/patient3/patient3view6.hbs
@@ -53,7 +53,7 @@ The pathologist examined Brittany’s tissue and has provided a pathology report
       </div>
 
         <ul class="specs fig-fix">
-          <li><strong>Final Diagnosis:</strong> Infiltrating ductal carcinoma</li>
+          <li><strong>Final Diagnosis:</strong> Invasive ductal carcinoma</li>
           <li><strong>Histological Grade:</strong> 3</li>
           <li><strong>Stage:</strong> 2</li>
           <li><strong>Number of nodes examined:</strong> 5</li>
