--- a/src/javascript/templates/patient3/patient3view8.hbs
+++ b/src/javascript/templates/patient3/patient3view8.hbs
@@ -38,7 +38,7 @@
   </div>
   <div class="col-md-6 col-md-offset-1 top-quote">
     <blockquote>
-Brittany’s tissue sample has been sent for HER2 FISH testing.
+Brittany’s tissue sample has been sent for ER testing.
  </blockquote>
     <main id="content-main" class="row patient-3 top-gray svg-test">
 
@@ -54,17 +54,11 @@ Brittany’s tissue sample has been sent for HER2 FISH testing.
 
         </div>
       </div> -->
-      <p>Are the results amplified or not amplified?
- <br><br>
+      <p>Are Brittany’s ER test results positive or negative?<br><br>
 <strong>Be sure to record this information in the Lab Handbook. Hover over the tissue samples to magnify.
 </strong>
 </p>
-<ul class="specs multi-pad">
-  <li><strong>Specimen Type:   </strong>Left breast biopsy</li>
-  <li><strong>Laterality:</strong> left</li>
-  <li><strong>Tumor size:</strong>1 cm</li>
 
-</ul>
 <figure class="multi-pad">
   <img class="magnify one-hun" class="zoom" data-magnify-src="images/ER_Invasive2_Brittany.jpg" src="images/ER_Invasive2_Brittany.jpg" alt="cell biopsy slide 3" />
 </figure>
