--- a/src/javascript/templates/patient1/patient1View28.hbs
+++ b/src/javascript/templates/patient1/patient1View28.hbs
@@ -61,49 +61,50 @@ Should the test results be reported as amplified or not amplified?<br><br>
 
 
 </p>
-<div class="row m-bottom multi-pad">
 
-
-<div class="col-md-5 yes-no col-sm-offset-1-5">
-  <a  class="continue next y-n"><button type="button" data-toggle="modal" data-backdrop="static" data-target="#myModal2"  name="button">Amplified</button></a>
-  <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-body">
-        <h2>That is incorrect. The HER2 FISH ratio is 1.5, so HER2 is not amplified.</h2>
-        </div>
-        <div class="modal-footer background-nav-blue">
-          <a data-navigate="patient1view29" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
-
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<div style="margin-left: 25px;" class="col-md-5 yes-no">
-  <a  class="continue next y-n"><button  type="button"data-toggle="modal" data-backdrop="static" data-target="#myModal"  name="button">Not Amplified</button></a>
-
-  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-body">
-        <h2><span class="pink-hl">Correct</span>. The HER2 FISH ratio is 1.5, so HER2 is not amplified. This indicates that HER2-targeted therapy should not be recommended as part of Velma’s treatment.</h2>
-        </div>
-        <div class="modal-footer background-nav-blue">
-          <a data-navigate="patient1view29" class="continue"><button id="next-page" type="button" class="muted"  name="button">Continue</button></a>
-
-        </div>
-      </div>
-    </div>
-  </div>
-
-</div>
-</div>
 
             <div class="svg-container">
                 <img class="pro-fix" src="images/Microscope_GreenRedDots_6_6.jpg" alt="cell biopsy slide 3" />
 
 
+            </div>
+            <div class="row m-bottom con-fix">
+
+
+            <div class="col-md-5 yes-no col-sm-offset-1-5">
+              <a  class="continue next y-n"><button type="button" data-toggle="modal" data-backdrop="static" data-target="#myModal2"  name="button">Amplified</button></a>
+              <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                    <div class="modal-body">
+                    <h2>That is incorrect. The HER2 FISH ratio is 1.5, so HER2 is not amplified.</h2>
+                    </div>
+                    <div class="modal-footer background-nav-blue">
+                      <a data-navigate="patient1view29" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div style="margin-left: 25px;" class="col-md-5 yes-no">
+              <a  class="continue next y-n"><button  type="button"data-toggle="modal" data-backdrop="static" data-target="#myModal"  name="button">Not Amplified</button></a>
+
+              <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                    <div class="modal-body">
+                    <h2><span class="pink-hl">Correct</span>. The HER2 FISH ratio is 1.5, so HER2 is not amplified. This indicates that HER2-targeted therapy should not be recommended as part of Velma’s treatment.</h2>
+                    </div>
+                    <div class="modal-footer background-nav-blue">
+                      <a data-navigate="patient1view29" class="continue"><button id="next-page" type="button" class="muted"  name="button">Continue</button></a>
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
             </div>
             <p class=" pad50">
               <strong>Be sure to record the results in your Lab Handbook.
