--- a/src/javascript/templates/patient1/patient1View37-5.hbs
+++ b/src/javascript/templates/patient1/patient1View37-5.hbs
@@ -62,7 +62,7 @@ Check on Velma's progress.    </blockquote>
 <figure>  <img src="images/test_tubes_and_data_sheets.jpg" alt="cell biopsy slide 3" /></figure>
 
 
-            <div class="row continue-container background-nav-blue">
+            <div class="row continue-container background-nav-blue butt-fix">
                 <div class="col-md-12 no-pad text-center">
                   <div class="col-md-4">
                     <a data-navigate="patient1view37" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
@@ -71,25 +71,10 @@ Check on Velma's progress.    </blockquote>
 
                   </div>
                   <div class="col-md-4">
-                    <a class="continue next"><button type="button" data-toggle="modal" data-backdrop="static" data-target="#myModal"  name="button">Next &#8594;</button></a>
+                    <a data-navigate="patient1view38" class="continue next"><button type="button" data-toggle="modal" data-backdrop="static" data-target="#myModal"  name="button">Next &#8594;</button></a>
 
                     <!-- Modal -->
-                    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                      <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                          <div class="modal-body">
-                          <p>
-                          Following her treatment, physicians will monitor Velma to determine whether or not her breast cancer has returned.  If the cancer does not recur, the treatment approach was successful.  If her breast cancer recurs, the treatment approach was not successful.<br><br>
-<strong>As a result of hormonal therapy, Velma has not experienced a recurrence of breast cancer.  Success!</strong>
-                          </p>
-                          </div>
-                          <div class="modal-footer background-nav-blue">
-                            <a data-navigate="patient1view38" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
 
-                          </div>
-                        </div>
-                      </div>
-                    </div>
                   </div>
                 </div>
             </div>
