fixed muted next button being allowed to navigate to next page

--- a/src/javascript/templates/patient1/patient1View9.hbs
+++ b/src/javascript/templates/patient1/patient1View9.hbs
@@ -131,7 +131,7 @@
 
                           </div>
                           <div class="col-md-4">
-                              <a href="/patient1view10" data-navigate="patient1view10" class="continue next">
+                              <a class="continue next">
                                   <button type="button" class="muted" name="button">Next &#8594;</button>
                               </a>
                           </div>
