--- a/src/javascript/templates/patient3/patient3view10.hbs
+++ b/src/javascript/templates/patient3/patient3view10.hbs
@@ -105,7 +105,7 @@
 
                </div>
                <div class="col-md-4">
-                 <a data-navigate="patient3view11" class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
+                 <a class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
                </div>
              </div>
          </div>
