--- a/src/javascript/templates/patient3/patient3view5.hbs
+++ b/src/javascript/templates/patient3/patient3view5.hbs
@@ -116,7 +116,7 @@ Brittany had a left breast biopsy. Let’s evaluate the tissue.
 
                </div>
                <div class="col-md-4">
-                 <a data-navigate="patient3view6" class="continue next"><button class="muted" type="button" class="muted" name="button">Next &#8594;</button></a>
+                 <a class="continue next"><button class="muted" type="button" class="muted" name="button">Next &#8594;</button></a>
                </div>
              </div>
          </div>
