--- a/src/javascript/templates/patient2/patient2view8.hbs
+++ b/src/javascript/templates/patient2/patient2view8.hbs
@@ -114,7 +114,7 @@ Michele’s tissue sample has been sent for ER testing.  </blockquote>
 
                </div>
                <div class="col-md-4">
-                 <a data-navigate="patient2view9" class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
+                 <a class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
                </div>
              </div>
          </div>
