fixed new slide hookup and fixed some other small issues with body scrolling in patient1

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1144,6 +1144,7 @@ main.patient-2.top-gray {
 }
 .modal-footer .continue button {
   top:0;
+  color:white;
 }
 .continue-2:not(.next) {
   position: relative;
