--- a/src/javascript/templates/patient1/patient1View19-3.hbs
+++ b/src/javascript/templates/patient1/patient1View19-3.hbs
@@ -75,7 +75,7 @@ Velma’s doctors have sent her tissue sample for ER testing.   </blockquote>
                  <h2><span class="pink-hl">Correct</span>. Velma’s tissue sample contains brown coloring. Her ER test is positive.</h2>
                  </div>
                  <div class="modal-footer background-nav-blue">
-                   <a href="/patient1view8" data-navigate="patient1view8" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
+                   <a href="/patient1view19_5" data-navigate="patient1view19_5" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
 
                  </div>
                </div>
@@ -92,7 +92,7 @@ Velma’s doctors have sent her tissue sample for ER testing.   </blockquote>
                  <h2>Incorrect. Velma’s tissue sample contains brown coloring, so her ER test is positive. </h2>
                  </div>
                  <div class="modal-footer background-nav-blue">
-                   <a href="/patient1view10" data-navigate="patient1view10" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
+                   <a href="/patient1view19_5" data-navigate="patient1view19_5" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
 
                  </div>
                </div>
@@ -111,7 +111,7 @@ Velma’s doctors have sent her tissue sample for ER testing.   </blockquote>
 
                 </div>
                 <div class="col-md-4">
-                  <a data-navigate="patient1view17" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
+                  <a class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
                 </div>
               </div>
           </div>
