update alt tags

--- a/src/javascript/templates/patient1/patient1View17.hbs
+++ b/src/javascript/templates/patient1/patient1View17.hbs
@@ -55,7 +55,7 @@
 
       <h2>Conducting the ER test:</h2>
         <div class="svg-container">
-          <img src="images/test_sample_and_gloved_hand2.jpg" alt="Technician holds a slide containing a tissue sample" />
+          <img src="images/test_sample_and_gloved_hand2.jpg" alt="Pathologist views slide containing tissue sample" />
             <div class="svg-text full">
                 <p>
                     <strong>Step 1:</strong>
