--- a/src/javascript/templates/patient1/patient1View18.hbs
+++ b/src/javascript/templates/patient1/patient1View18.hbs
@@ -60,7 +60,7 @@
 
     <h2>Conducting the ER test:</h2>
       <div class="svg-container">
-          <img class="magnify" class="zoom" data-magnify-src="images/test_sample_and_gloved_hand2.jpg" src="images/test_sample_and_gloved_hand2.jpg" alt="Technician holds a slide containing a tissue sample" />
+          <img class="magnify" class="zoom" data-magnify-src="images/test_sample_and_gloved_hand2.jpg" src="images/test_sample_and_gloved_hand2.jpg" alt="Pathologist views slide containing tissue sample" />
           <div class="svg-text full">
               <p>
                   <strong>Step 2:</strong>
