--- a/src/javascript/templates/patient1/patient1View23.hbs
+++ b/src/javascript/templates/patient1/patient1View23.hbs
@@ -68,7 +68,7 @@
 
 <h2>Conducting the HER2 FISH Test:</h2>
           <div class="svg-container">
-              <img src="images/microscope3.jpg" alt="Technician views a slide under a microscope" />
+              <img src="images/microscope3.jpg" alt="Pathologist places slide containing tissue sample on microscope stage" />
               <div class="svg-text full">
                   <p>
                     <strong>Step 2:</strong> The sample is washed in a buffer agent.</p>
