--- a/src/javascript/templates/patient1/patient1View8.hbs
+++ b/src/javascript/templates/patient1/patient1View8.hbs
@@ -71,7 +71,7 @@
                 </p>
 
 <figure>
-                     <img class="magnify one-hun" class="zoom" data-magnify-src="images/BenignBreast_NORMAL.jpg" src="images/BenignBreast_NORMAL.jpg" alt="cell biopsy slide 3" alt="Magnification of cells showing orderly duct structures, similar cells, and purple stain with intervening pink stain." />
+                     <img class="magnify one-hun" class="zoom" data-magnify-src="images/BenignBreast_NORMAL.jpg" src="images/BenignBreast_NORMAL.jpg" alt="Magnification of cells showing orderly duct structures, similar cells, and purple stain with intervening pink stain." />
 </figure>
 <h2>Cancerous</h2>
 
