--- a/src/javascript/templates/patient1/patient1View3.hbs
+++ b/src/javascript/templates/patient1/patient1View3.hbs
@@ -53,7 +53,7 @@
 
         </p>
         <figure>
-         <img src="images/breast_scan2.jpg" alt="A mammogram film showing abnormal ardea near bottom of breast" />
+         <img src="images/breast_scan2.jpg" alt="A mammogram film showing abnormal area near bottom of breast" />
         </figure>
         <div class="row continue-container background-nav-blue">
             <div class="col-md-12 no-pad text-center">
