--- a/src/javascript/templates/patient1/patient1View4.hbs
+++ b/src/javascript/templates/patient1/patient1View4.hbs
@@ -55,7 +55,7 @@
 	.st1{fill:#FFFFFF;}
 	.st2{fill:none;}
 </style>
-<image style="width:100%;height:100%;position:relative;top:0;left:0;bottom:0;right:0;overflow:visible;enable-background:new" width="810" height="810" xlink:href="images/Mammogram_Right_Abnormal_Patient1-Velma.jpg" alt="A mammogram film showing normal breast tissue">
+<image style="width:100%;height:100%;position:relative;top:0;left:0;bottom:0;right:0;overflow:visible;enable-background:new" width="810" height="810" xlink:href="images/Mammogram_Right_Abnormal_Patient1-Velma.jpg" alt="Mammogram film showing abnormality in right breast">
 </image>
 <ellipse class="st0" cx="606.7" cy="656.5" rx="68.1" ry="68.8"/>
 <path fill="#FFFFFF" class="circle" d="M606.7,732.1c-41.4,0-74.9-33.9-74.9-75.6s33.6-75.6,74.9-75.6s74.9,33.9,74.9,75.6l0,0
