--- a/src/javascript/templates/patient2/patient2view2.hbs
+++ b/src/javascript/templates/patient2/patient2view2.hbs
@@ -54,7 +54,7 @@
         <div class="svg-text">Click the area that shows an abnormality.</div>
       <!-- <svg preserveAspectRatio="xMinYMin meet" class="svg-content" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
          width="100%" height="100%" viewBox="0 0 432 451.2" enable-background="new 0 0 432 451.2" xml:space="preserve">
-         <image width="432" height="451.2" xlink:href="images/Mammogram_Left_Abnormal_Patient2-Michele.jpg">
+         <image width="432" height="451.2" xlink:href="images/Mammogram_Left_Abnormal_Patient2-Michele.jpg" alt="Mammogram film showing abnormality near bottom of left breast">
          </image>
       <path class="cancer correct"  fill-rule="evenodd" clip-rule="evenodd" fill="none" d="M111.36,157.92l1.92-9.12l6.24,1.44l3.84,3.36l2.88-3.36l-0.96-5.76
         l6.24-1.44l0.96,5.28l6.24-4.8l0.48-6.24v-8.16l4.32-0.96l1.44-7.68l3.84-0.48l9.6-0.96l12,0.48l-0.96-4.32l-19.2-1.44l-9.6-6.24
@@ -78,7 +78,7 @@
       	.st1{fill:#FFFFFF;}
 
       </style>
-      <image style="width:100%;height:100%;position:relative;top:0;left:0;bottom:0;right:0;overflow:visible;enable-background:new" width="810" height="810" alt="A mammogram film showing normal breast tissue" xlink:href="images/Mammogram_Right_Abnormal_Patient1-Velma.jpg" >
+      <image style="width:100%;height:100%;position:relative;top:0;left:0;bottom:0;right:0;overflow:visible;enable-background:new" width="810" height="810" alt="Mammogram film showing abnormality near bottom of left breast" xlink:href="images/Mammogram_Right_Abnormal_Patient1-Velma.jpg" >
       </image>
       <ellipse class="st0" cx="606.7" cy="656.5" rx="68.1" ry="68.8"/>
       <path fill="#FFFFFF" class="circle" d="M606.7,732.1c-41.4,0-74.9-33.9-74.9-75.6s33.6-75.6,74.9-75.6s74.9,33.9,74.9,75.6l0,0
