--- a/src/javascript/templates/startView2.hbs
+++ b/src/javascript/templates/startView2.hbs
@@ -10,7 +10,7 @@
 <div class="pick-patient col-md-8 col-md-offset-2">
   <div class="overlay-pink"></div>
     <div class="col-md-5 no-pad">
-      <img class="patient1" src="images/patient3-final.jpg">
+      <img class="patient1" src="images/patient3-final.jpg" alt="Velma Belt">
         <img class="up-next finished" src="images/completed.png" alt="" />
     </div>
     <div class="col-md-7 no-pad ">
@@ -55,7 +55,7 @@
 </div>
 <div class="pick-patient col-md-8 col-md-offset-2 locked">
   <div class="col-md-5 no-pad">
-    <img class="patient3" src="images/patient2-final.jpg">
+    <img class="patient3" src="images/patient2-final.jpg" alt="Brittany Featherston">
     <img class="up-next" src="images/up-next.png" alt="" />
   </div>
   <div class="col-md-7 no-pad">
