--- a/src/javascript/templates/startView3.hbs
+++ b/src/javascript/templates/startView3.hbs
@@ -10,7 +10,7 @@
 <div class="pick-patient col-md-8 col-md-offset-2">
   <div class="overlay-pink"></div>
     <div class="col-md-5 no-pad">
-      <img class="patient1" src="images/patient3-final.jpg">
+      <img class="patient1" src="images/patient3-final.jpg" alt="Velma Belt">
         <img class="up-next finished" src="images/completed.png" alt="" />
     </div>
     <div class="col-md-7 no-pad ">
@@ -54,7 +54,7 @@
 
   <div class="col-md-5 no-pad">
 
-    <img class="patient3" src="images/patient2-final.jpg" alt="Image of Brittany Featherston">
+    <img class="patient3" src="images/patient2-final.jpg" alt="Brittany Featherston">
   </a>
   </div>
   <div class="col-md-7 no-pad">
