fixed pink highlights

--- a/src/javascript/templates/patient3/patient3view11.hbs
+++ b/src/javascript/templates/patient3/patient3view11.hbs
@@ -70,7 +70,7 @@ Do you have enough information to make a recommendation for treatment or do you 
                      <div class="modal-content">
                        <div class="modal-body">
 
-                       <h2>Select Treatment: You do not have enough information to select treatment for your patient. Please continue on to take the next test.</h2>
+                       <h2>You do not have enough information to select treatment for your patient. Please continue on to take the next test.</h2>
 
                        </div>
                        <div class="modal-footer background-nav-blue">
@@ -92,7 +92,7 @@ Do you have enough information to make a recommendation for treatment or do you 
    <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-body">
-      <h2>Next Test: <span class="pink-hl">That is correct</span>. Based on Brittany’s test results, you do not have enough information to make a treatment recommendation.</h2>
+      <h2><span class="pink-hl">That is correct</span>. Based on Brittany’s test results, you do not have enough information to make a treatment recommendation.</h2>
       </div>
       <div class="modal-footer background-nav-blue">
          <a class="continue-2" data-navigate="patient3view12" href="patient3view12"><button  name="button">Continue</button></a>
