fixed spacing on startview2

--- a/src/javascript/templates/startView2.hbs
+++ b/src/javascript/templates/startView2.hbs
@@ -53,7 +53,7 @@
       </a>
     </div>
 </div>
-<div class="pick-patient col-md-8 col-md-offset-2 locked">
+<div class="pick-patient col-md-8 col-md-offset-2 locked m-bot-6">
   <div class="col-md-5 no-pad">
     <img class="patient3" src="images/patient2-final.jpg" alt="Brittany Featherston">
     <img class="up-next" src="images/up-next.png" alt="" />
