fixed patient123 in the upper nav bar

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1687,3 +1687,17 @@ top: 15px;
 .continue-fix:before, .continue-fix:after{
       top: 9px!important;
 }
+
+.patient-nav {
+  ul {
+    li:nth-child(1) {
+
+    }
+    li:nth-child(1) {
+
+    }
+    li:nth-child(1) {
+
+    }
+  }
+}
