working on fixing the patietn 2 and 3 images

--- a/src/javascript/templates/patient2/patient2view4.hbs
+++ b/src/javascript/templates/patient2/patient2view4.hbs
@@ -11,11 +11,11 @@
         <div class="row next-steps p-2-steps">
         <ul class="background-gray2">
             <li><span></span></li>
-            <li class="border-bottom purple-text"><span><img src="images/icon_biopsy_off.png" alt="" /></span>Biopsy</li>
+            <li class="border-bottom"><span><img src="images/icon_biopsy_on.png" alt="" /></span>Biopsy</li>
           </ul>
-          <ul class="background-purple">
+          <ul>
             <li><span></span></li>
-            <li class="border-bottom"><img src="images/icon_ertest_on.png" alt="" /></span> ER Test</li>
+            <li class="border-bottom"><img src="images/icon_ertest_over.png" alt="" /></span> ER Test</li>
           </ul>
 
           <ul>
